--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.5",
     "react-typed": "^2.0.12",
     "saas": "^1.0.0",
     "sass": "^1.84.0",
